# beans

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  conftest.py  log_debug.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
scripts/: check_speeds.py  debug_world.py  diag_plot_from_logs.py  inspect_bean.py  inspect_imports.py  inspect_soft_log.py  plot_from_logs.py  run_window.py
summaries/: 2024-12-19-BeanClassSplitIntoLogicAndSpriteComponents.md  2025-01-13-sprite-size-scaling-diagram.md  2025-01-13-sprite-size-scaling-implementation.md  2025-01-15-sprite-size-scaling.md  2025-01-15-test-refactoring-production-fixes.md  2025-01-20-collision-detection-implementation.md  2025-06-12-energy-system-refactoring-diagram.md  2025-06-12-energy-system-refactoring.md  2025-11-19-BeanClassSplitIntoLogicAndSpriteComponents.md  2025-11-25-collision-detection-spatial-hashing.md  2025-11-25-energy-system-diagram.md  2025-11-25-energy-system.md  2025-11-25-population-estimation-diagram.md  2025-11-25-population-estimation.md  2025-11-26-collision-detection-diagram.md  2025-11-26-collision-detection.md  2025-11-26-documentation-fix-placement-behavior.md  2025-11-26-placement-algorithm-diagrams.md  2025-11-26-random-placement-strategy-with-collision-detection.md  2025-11-27-reporting-flow-diagram.md  2025-11-27-reporting-flow.md  2025-11-28-placement-validator-diagram.md  2025-11-28-placement-validator-refactoring.md  2025-11-30-genotype-diagram.md  2025-11-30-genotype-implementation.md  2025-12-01-phenotype-diagram.md  2025-12-01-phenotype-implementation.md  2025-12-02-genetics-module-extraction.md  2025-12-02-survival-mechanics-and-genetic-age.md  2025-12-02-survival-mechanics-diagram.md  2025-12-06-pluggable-energy-system-diagram.md  2025-12-06-pluggable-energy-system.md  2025-12-08-rendering-movement-and-bounce.md  2025-12-09-bean-dynamics-speed-isolation-diagram.md  2025-12-09-bean-dynamics-speed-isolation.md  (+15 more)
(+87 files in other folders)
